--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ uwsgi = {version = "^2.0.8", platform = "!=win32"}
 weasyprint = ">=48"
 oauthlib = "^3.0"
 jaeger-client = "^4.3.0"
+python-dotenv = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 black = "19.10b0"
