--- a/requirements.txt
+++ b/requirements.txt
@@ -81,6 +81,7 @@ pycparser==2.19
 pyjwt==1.7.1
 pyphen==0.9.5
 python-dateutil==2.8.1
+python-dotenv==0.12.0
 python-magic==0.4.15
 python-magic-bin==0.4.14; sys_platform == "win32"
 pytz==2019.3
