--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -136,6 +136,7 @@ pytest-mock==1.13.0
 pytest-vcr==1.0.2
 pytest-xdist==1.31.0
 python-dateutil==2.8.1
+python-dotenv==0.12.0
 python-magic==0.4.15
 python-magic-bin==0.4.14; sys_platform == "win32"
 python-slugify==1.2.6
