feat: support .env files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ weasyprint = ">=48"
 oauthlib = "^3.0"
 jaeger-client = "^4.3.0"
 django-cache-url = "^3.1.2"
+python-dotenv = "^0.13.0"
 
 [tool.poetry.dev-dependencies]
 black = "19.10b0"
