--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -48,6 +48,7 @@ django-phonenumber-field==4.0.0
 django-prices==2.2.0
 django-prices-openexchangerates==1.1.0
 django-prices-vatlayer==1.1.0
+django-redis==4.11.0
 django-render-block==0.6
 django-storages==1.9.1
 django-stubs==1.2.0
@@ -134,6 +135,7 @@ pytest-mock==3.1.0
 pytest-vcr==1.0.2
 pytest-xdist==1.32.0
 python-dateutil==2.8.1
+python-dotenv==0.13.0
 python-magic==0.4.18
 python-magic-bin==0.4.14; sys_platform == "win32"
 python-slugify==1.2.6
