--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,8 @@ transifex-client = "^0"
 django-stubs = "1.2"
 mypy = "0.740"
 pywatchman = "^1.4.1"
+werkzeug = "^1.0.1"
+pyOpenSSL = "^19.1.0"
 
 [tool.black]
 target_version = ['py35', 'py36', 'py37', 'py38']
