--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ Adyen = "^3.0.0"
 google-cloud-pubsub = ">=1.7,<3.0"
 uvicorn = {extras = ["standard"], version = "^0.12.2"}
 gunicorn = "^20.0.4"
+meilisearch = "^0.13.0"
 
 [tool.poetry.dev-dependencies]
 black = "19.10b0"
