--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ asgiref==3.3.0
 babel==2.8.0
 beautifulsoup4==4.7.1
 billiard==3.6.3.0
-boto3==1.16.11
-botocore==1.19.11
+boto3==1.16.12
+botocore==1.19.12
 braintree==4.4.0
 cachetools==4.1.1
 cairocffi==1.2.0
@@ -43,7 +43,7 @@ django-versatileimagefield==2.0
 draftjs-sanitizer==1.0.0
 enmerkar==0.7.1
 et-xmlfile==1.0.1
-faker==4.14.1
+faker==4.14.2
 freezegun==0.3.15
 google-api-core==1.23.0
 google-auth==1.23.0
@@ -79,6 +79,7 @@ markdown==3.3.3
 maxminddb==2.0.3
 maxminddb-geolite2==2018.703
 measurement==3.2.0
+meilisearch==0.13.0
 mpmath==1.1.0
 mypy-extensions==0.4.3
 oauthlib==3.1.0
